fix: spacing issue for tabs

--- a/src/features/styles/theme/tabs.scss
+++ b/src/features/styles/theme/tabs.scss
@@ -9,14 +9,10 @@
   font-size: 1.4rem;
   font-family: Ubuntu, sans-serif;
   transition: all 0.25s;
-  min-inline-size: 19.4rem;
-  min-block-size: 4rem;
   padding: 1rem 1.6rem;
 
   @include breakpoints(tablet) {
     font-size: 2rem;
-    min-inline-size: 21.3rem;
-    min-block-size: 6.4rem;
     padding: 1.7rem 2rem;
   }
 }
